--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               <h4>Library</h4>
               <div > <a href="https://github.com/kishor7008/library">
                 <i class="fa-brands fa-github" style="margin: 0 10px ;font-size: 20px;"></i></a>
-                <a href="https://github.com/kishor7008/library_backend"><i class="fa-solid fa-link" style="margin: 0 30px 0 0;font-size: 20px;"></i></a> </div>
+                <a href="https://64a4fd9382e2f5583243cbca--phenomenal-cheesecake-8e862f.netlify.app/"><i class="fa-solid fa-link" style="margin: 0 30px 0 0;font-size: 20px;"></i></a> </div>
             </div>
               <b>Description</b> : 
               <em>A comprehensive library management system that automates catalog management, streamlines borrowing and reservations, and provides reporting and analytics for efficient library operations and enhanced user experience.</em>
